--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--  <link rel="stylesheet" href="css/float.css" /> -->
     <link rel="stylesheet" href="css/grid.css" />
-    <title>Layout</title>
+    <title>Layout - Ejemplo</title>
   </head>
   <body>
     <header><nav>Navbar</nav></header>
@@ -27,7 +27,7 @@
           </ul>
         </nav>
       </section>
-      <section class="center">Section</section>
+      <section class="center">Darwin FLores</section>
       <section class="right">Section</section>
     </main>
     <footer>Footer</footer>
